# rust-grpc-example

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  run.sh
docs/: 001_list_products_api.md  002_list_products_client.md  003_availability_filter.md
src/: lib.rs
src/grpc/: client.rs  mod.rs
src/proto/: mod.rs  stock.proto
src/tests/: log.rs  mod.rs
tests/: cli.rs
